--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,15 @@
 {
-    "name": "dibakar/laravel-ownership",
-    "description": "Add model ownership (user/team) with traits, scopes, and policies.",
+    "name": "dibakarmitra/laravel-ownership",
+    "description": "Flexible ownership management package for Laravel with single & multiple ownership support. with traits, scopes, and policies.",
+    "keywords": ["laravel", "ownership", "permissions", "roles", "multi-owner", "single-owner", "ownership-management", "laravel-ownership", "gate"],
     "type": "library",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Dibakar Mitra",
+            "email": "mitradibakar@outlook.com"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0",
