--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": false,
+    "prefer-stable": true,
     "config": {
         "sort-packages": true,
         "preferred-install": "dist"
