--- a/composer.json
+++ b/composer.json
@@ -45,5 +45,11 @@
         "sort-packages": true,
         "preferred-install": "dist"
     },
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/dibakarmitra/laravel-ownership"
+        }
+    ]
 }
